fixed TotemControllerTest